Bug 560486 - [mai] Firefox Web parts for Maithili; p=sangeeta
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106523 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/mai/newsletter.lang
+++ b/mai/newsletter.lang
@@ -70,126 +70,126 @@ Your newsletter subscription has been confirmed.
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+अहाँ तैआर छी! <span>मुदा रुकू, आओर बहुते चीज अछि</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+सबसँ बेसी जरूरी जानकारी चाहैछी? हमरा अपना संबंधमे आओर बताउ. आओर, जखन अहाँ एतए छी, मोजिल्ला समाचारक लेल साइन अप करू.
 
 
 ;Firefox & You
-Firefox & You
+फायरफाक्स आओर अहाँ
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+हमर आन न्यूजलेटर:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+अपन पसिन्नक ब्राउजरसँ बेसी फायदा लेल लेल सलाह आओर युक्ति बताउ.
 
 
 ;Firefox Mobile
-Firefox Mobile
+फायरफाक्स मोबाइल
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+फायरफाक्सकेँ सबसँ नव सहयुक्ति आओर फीचरक संबंधमे आओर जानू.
 
 
 ;Beta News
-Beta News
+बीटा समाचार
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+फायरफाक्स डेस्कटाप आओर मोबाइलक सबसँ हालक फीचरक संबंधमे अंतिम रिलीजक पहिने पढू.
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+आउ हम मित्र बनू!
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+फायरफाक्स अहाँक मनपसिन्न सोसल नेटवर्किंग साइटो पर अछि. हमरा संग जुड़ू आओर गप-सप मे भाग लिअ.
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+अपन <span>न्यूजलेटर सदस्यता</span> प्रबंधित करू
 
 
 ;Subscribe
-Subscribe
+सदस्यता लिअ
 
 
 ;Unsubscribe
-Unsubscribe
+सदस्यता छोड़ब
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+एकरा जाँचू जँ अहाँ सभ मोजिल्ला ईमेलसँ हटाबैक लेल चाहैछी
 
 
 ;Remove me from all Mozilla emails
-Remove me from all Mozilla emails
+सभ मोजिल्ला ईमेलसँ हमरा हटाबू
 
 
 ;Save Preferences
-Save Preferences
+वरीयता सहेजू
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+अपन ईमेल वरीयताक अपडेट करबाक लेल धन्यवाद.
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+अहाँक सदस्यता वापस लए लेल गेले.
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+हमरा माफ करू जे अहाँ छोड़ि रहल छी. की अहाँ बताबै लेल चाहब जे अहाँ किआ छोड़ि रहल छी?
 
 
 ;You send too many emails.
-You send too many emails.
+अहाँ बहुते ईमेल भेजै छी.
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+अहाँक अंतर्वस्तु हमरासँ संबंधित नहि अछि.
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+अहाँक ईमेल पढबामे बहुत कठिन छल.
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+हम एकरा लेल साइन अप नहि कएने रही.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+हम फेसबुक आओर ट्विटर पर मोजिल्लाक संपर्क में छी.
 
 
 ;Submit
-Submit
+सुपुर्द करू
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
+हमरा बताउ जे किआ अहाँ छोड़ि रहल छी.
 
 
 ;Mozilla Newsletters
-Mozilla Newsletters
+मोजिल्ला न्यूजलेटर
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
-Thanks! Please check your inbox to confirm your subscription.
+धन्यवाद! अपन सदस्यताक पुष्टिक लेल अपन इनबाक्स जाँचू.
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
+अहाँ mozilla@e.mozilla.org सँ पुष्टि करबाक लेल एकटा ईमेल पाएब. जँ अहाँक ई नहि भैटल, अपन स्पैम फिल्टरक संग एकरा जाँचू जाहिसँ अहाँ हमर न्यूजलेटर पाबि सकैछी.
 
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
+कृपया अपन भेजैबला पता जोड़ब कए पक्का करू: mozilla@e.mozilla.org केँ अपन पता पुस्तिकामे जाहिसँ हम पक्का कए सकी जे हम अहाँक इनबाक्समे हमेशा पहुँच सकी.
 
 
