--- a/mai/snippets.lang
+++ b/mai/snippets.lang
@@ -2,130 +2,130 @@
 
 
 ;Take Firefox anywhere you go! The latest Firefox for Android is live and ready for you to enjoy. <a href="%s">Get it now</a>.
-Take Firefox anywhere you go! The latest Firefox for Android is live and ready for you to enjoy. <a href="%s">Get it now.</a>
+फायरफाक्स केँ मनमर्जी अपना संग ले चलू! एंड्रायडक लेल ताजा फायरफाक्स लाइव अछि आओर अहाँ एकर आनंद लए सकैछी. <a href="%s">एकरा अखन पाउ.</a>
 
 
 ;Now that you've got the latest version, <a href="%s">learn about all the cool things</a> you can do with your Firefox.
-Now that you've got the latest version, <a href="%s">learn about all the cool things</a> you can do with your Firefox.
+आब जखन अहाँक संग ताजा संस्करण अछि, <a href="%s">ओ किछु बेसी नीक चीजक संबंधमे जानू</a> जकरा अहाँ फायरफाक्सक लेल उपयोग कए सकैछी.
 
 
 ;You're not on the latest version of Firefox. <a href="%s">Upgrade today</a> to get the best of the Web!
-You're not on the latest version of Firefox. <a href="%s">Upgrade today</a> to get the best of the Web!
+अहाँ फायरफाक्सक ताजा संस्करण पर नहि छी. वेबक सर्वश्रेष्ठ लेबाक लेल <a href="%s">आइ उन्नत करू</a>!
 
 
 ;Get the latest Firefox features first in <a href="%s">Aurora</a>.
-Get the latest Firefox features first in <a href="%s">Aurora</a>.
+ताजा फायरफाक्सक विशेषताकेँ <a href="%s">आरोरा</a> मे पाउ.
 
 
 ;Get a sneak preview of the future of Firefox. <a href="%s">Download Firefox Aurora</a> and test the latest features.
-Get a sneak preview of the future of Firefox. <a href="%s">Download Firefox Aurora</a> and test the latest features.
+भविष्यक फायरफाक्सक चुपके सँ दर्शन करू. <a href="%s">फायरफाक्स आरोरा डाउनलोड करू</a> आओर नवीनतम विशेषताक जाँच करू.
 
 
 ;Before Firefox there's Beta, and before Beta there's Aurora. <a href="%s">Try Firefox Aurora</a> now for the latest cutting edge features.
-Before Firefox there's Beta, and before Beta there's Aurora. <a href="%s">Try Firefox Aurora</a> now for the latest cutting edge features.
+फायरफाक्सक पहिने एकगोट बीटा उपलब्ध अछि आओर बीटाक पहिने आरोरा अछि. अत्याधुनिक विशेषताक लेल <a href="%s">फायरफाक्स आरोरा लगाकए देखू</a>.
 
 
 ;<a href="%s">Become a Firefox Affiliate</a> and get everything you need to share Firefox with the world!
-<a href="%s">Become a Firefox Affiliate</a> and get everything you need to share Firefox with the world!
+<a href="%s">फायरफाक्ससँ संबद्ध होउ</a> आओर ओ सबकिछु पाउ जकरा फायरफाक्सकेँ अहाँ दुनियासँ साझा करबाक लेल चाहैछी!
 
 
 ;Firefox is proudly non-profit and free to innovate on your behalf without compromise. <a href="%s">Learn more</a> about our mission.
-Firefox is proudly non-profit and free to innovate on your behalf without compromise. <a href="%s">Learn more</a> about our mission.
+फायरफाक्सकेँ गौरव अछि जे ई बिनु लाभबला संस्था अछि आओर एकरामे केओ नव काज करबाक लेल कोनो बाधा नहि अछि. हमर मिशन केँ संबंधमे <a href="%s">आओर जानू</a>.
 
 
 ;Fast, flexible and secure, Firefox is the only browser that puts you first. <a href="%s">Learn more</a> about what makes us different by design.
-Fast, flexible and secure, Firefox is the only browser that puts you first. <a href="%s">Learn more</a> about what makes us different by design.
+तेज, लचीला आओर सुरक्षित, फायरफाक्स असगर ब्राउजर अछि जे अहाँक सबसँ उप्पर राखए. हमरा ई डिजायन कहिना अलग करैछे <a href="%s">आओर जानू</a>.
 
 
 ;<a href="%s">Download Firefox on your Android tablet</a> and put the power of the Web right in your hands. Get it now.
-<a href="%s">Download Firefox on your Android tablet</a> and put the power of the Web right in your hands. Get it now.
+<a href="%s">फायरफाक्सकेँ अपन एंड्राइड टैब्लेट पर डाउनलोड करू</a> आओर अपन हाथमे वेबकेँ पावर दिअ. एकरा पाउ.
 
 
 ;Keep your plugins up to date and stay safe online with <a href="%s">Plugin Check</a>.
-Keep your plugins up to date and stay safe online with <a href="%s">Plugin Check</a>.
+अपन प्लगइन केँ अप टू डेट राखू आओर <a href="%s">प्लगइन जाँच</a> सँ आनलाइन सुरक्षित रहू.
 
 
 ;Keep your Firefox in style. Dress it up in the latest <a href="%s">Personas</a>.
-Keep your Firefox in style. Dress it up in the latest <a href="%s">Personas</a>.
+फायरफाक्सकेँ स्टाइल मे राखू. एकरा ताजा <a href="%s">रूपाकार</a> मे राखू.
 
 
 ;Too many tabs? Reclaim your browser from the clutter with <a href="%s">Panorama</a>.
-Too many tabs? Reclaim your browser from the clutter with <a href="%s">Panorama</a>.
+बहुते टैब? <a href="%s">Panorama</a> केर संग अपना ब्राउजरकेँ फेर सँ पाउ.
 
 
 ;No two Firefox users are alike. <a href="%s">Add any button to your browser</a> or remove the ones you don't use. Right-click on home and select Customize.
-No two Firefox users are alike. <a href="%s">Add any button to your browser</a> or remove the ones you don't use. Right-click on home and select Customize.
+केओ दुइ फायरफाक्स प्रयोक्ता एकजहिना नहि अछि. <a href="%s">अपन ब्राउजरमे कोनो बटन जोड़ू</a> अथवा ओकरा हटाए दिअ जे अहाँ उपयोग नहि करैछी. होम पर दहिन्ना क्लिक करू आओर पसंदीदा करू केँ चुनू.
 
 
 ;Dress up your Firefox with Personas. Roll over to try, click to apply. Or visit the <a href="%s">gallery</a> for thousands more!
-Dress up your Firefox with Personas. Roll over to try, click to apply. Or visit the <a href="%s">gallery</a> for thousands more!
+रूपाकारसँ फायरफाक्सकेँ सजाउ. आजमाबै लेल रोल करू आओर लागू करबाक लेल क्लिक. अथवा <a href="%s">दीर्घा</a> मे आओर सभक देखबाक लेल जाउ!
 
 
 ;Get a first look at the latest features, even before they go to Beta. <a href="%s">Download Firefox Aurora.</a>
-Get a first look at the latest features, even before they go to Beta. <a href="%s">Download Firefox Aurora.</a>
+नवीन फीचर पर पहिल ध्यान दिअ, बीटाक पहिने. <a href="%s">फायरफाक्स अरोरा डाउनलोड करू.</a>
 
 
 ;<a href="%s">Download Firefox Aurora</a> to test features and help us determine what makes it to Beta.
-<a href="%s">Download Firefox Aurora</a> to test features and help us determine what makes it to Beta.
+<a href="%s">फायरफाक्स अरोरा डाउनलोड करू</a> फीचर जाँचबाक आओर हमरा ई निर्धारित करबामे मदति करब लेल जे ई किआ बीटा अछि.
 
 
 ;Get in early and help shape the future of Firefox. <a href="%s">Download Firefox Aurora.</a>
-Get in early and help shape the future of Firefox. <a href="%s">Download Firefox Aurora.</a>
+पहिने आउ आओर फायरफाक्सक ठीक करबाक लेल मदति करू. <a href="%s">फायरफाक्स अरोरा डाउनलोड करू.</a>
 
 
 ;Firefox for Android is now optimized for the way you browse on tablets. <a href="%s">Get the power of the Web at your fingertips</a>.
-Firefox for Android is now optimized for the way you browse on tablets. <a href="%s">Get the power of the Web at your fingertips</a>.
+एंड्राएडक लेल फायरफाक्स ओ तरीकाक लेल अनुकूलित अछि जे अहाँ टैब्लेट पर ब्राउज करैछी. <a href="%s">अपन फिंगरटिप पर वेबक पावर पाउ</a>.
 
 
 ;Download Firefox on your Android tablet and put the power of the Web right in your hands. <a href="%s">Get it now</a>.
-Download Firefox on your Android tablet and put the power of the Web right in your hands. <a href="%s">Get it now</a>.
+अपन एंड्राइड टैब्लेट परसँ फायरफाक्स डाउनलोड करू आओर अपन हाथमे वेबक पावर दिअ. <a href="%s">एकरा आब पाउ</a>.
 
 
 ;<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
-<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
+<a href="%">फायरफाक्स बीटा डाउनलोड करू</a>, फीडबैक दिअ आओर हमर 450 मिलियन प्रयोक्ताक लेल आगाँक फायरफाक्स बनाबैमे मदति करू.
 
 
 ;Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
-Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
+फीचर जाँचू, ओकरा परिष्कृत आओर पौलिश करू आओर अगिला संस्करणकेँ हमरा नीक बनाबैमे मदति करू. <a href="%">फायरफाक्स बीटा आइ डाउनलोड करू!</a>
 
 
 ;Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
-Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
+फायरफाक्ससँ प्यार अछि? हमरा अगिला संस्करण आओर नीक बनाबैक लेल चाहैछी? <a href="%">फायरफाक्स बीटा डाउनलोड करू</a> आओर हमरा आइ फीडबैक दिअ!
 
 
 ;Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
-Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
+की अहाँ नवीनतम फायरफाक्स बीटा चलाबैछी? <a href="%">आइ एकरा लिअ</a> आओर हमरा सबसँ हालक फीचरकेँ जाँचबामे मदति करू.
 
 
 ;Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
-Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
+नवीनतम फायरफाक्स बीटा पर नहि छी? <a href="%">आइ एकरा लिअ</a> अगिला संस्करणमे हम .
 
 
 ;Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
-Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
+अपन फीडबैक देबाक लेल चाहैछी? <a href="%">पता करू कहिना</a> आओर फायरफाक्सक अगिला संस्करणकेँ आओर नीक बनाबैमे मदति करू.
 
 
 ;Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
-Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
+फायरफाक्स बीटा प्रयोक्ता: अगिला संस्करणमे परिवर्तनक लेल <a href="%">फीडबैक देनाइ</a> नहि बिसरू.
 
 
 ;Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
-Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
+फायरफाक्सक अगिला संस्करणकेँ आओर विलक्षण बनाबैक लेल मदति करू. <a href="%">हमरासँ जुड़ु</a> अपन दोस्तसभक संग फायरफाक्सक साझा करू.
 
 
 ;Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
-Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
+आबैबला फायरफाक्स फीचरक पूर्वावलोकनमे दोस्तसभक आमंत्रित करू. <a href="%">हमरासँ जुड़ु</a> आओर फायरफाक्स अरोरा साझा करू.
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+फायरफाक्सकेँ बहुते कंप्यूटरपर उपयोग कए रहल छी? आब अहाँ सभटा पर सहयुक्तिसभकेँ सिंक कए सकैछी. <a href="%">पता करू जे कहिना सिंक सक्रिय कएल जाए सकैछ.</a>
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+तेज, तेज, तेज. <a %s>एंड्राएडक लेल फायरफाक्समे पैघ उन्नयन आएल अछि</a>. एकरा बारेमे प्रचार करू.
 
 
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
-Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+फायरफाक्स अहाँक अगिला काजकेँ तेज बनाबैक लेल नव फीचर जोड़लकाह! <a href="%">आओर जानब लेल वीडियाकेँ जाँचू.</a>
 
 
