--- a/mai/whatsnew.lang
+++ b/mai/whatsnew.lang
@@ -2,62 +2,62 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+हुर्रे! अहाँक फायरफाक्स अप टू डेट भ गेल
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+अहाँक फायरफाक्स पुरान अछि.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+सुरक्षा कारणसँ, हम <a href="{url}">सबसँ हाल आओर बड़</a> संस्करणकेँ उन्नयनक लेल अनुशंसा कए रहल छी.
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+अहाँ फायरफाक्सक अनचिह्न संस्करणक चलाए रहल छी.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+सुरक्षा कारणसँ, हम सुझाव दैछी जे अहाँ <a href="{url}">सबसँ हालक आओर महानतम संस्करण</a> केँ डाउनलोड करू.
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+अपना अगिला काज<br/>पहिनेसँ तेजी सँ करू
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+देखू जे कहिना फायरफाक्सक नवीन फीचर अहाँक तेजी आओर कुशलतासँ ब्राउज करैमे मदति करैछ.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+<a href="{url}">नव टैब फीचर »</a> केँ संबंधमे आओर जानू
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+हमर <a href="{url}">फेरसँ बदलल होम पेज »</a> क संबंधमे आओर जानू.
 
 
 ;Keep in touch
-Keep in touch
+संपर्कमे रहू
 
 
 ;Keep it moving
-Keep it moving
+एकरा जारी रहै दिअ
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+फायरफाक्स » <b>केँ एंड्राएड</b> कए लेल पाउ
 
 
 ;Keep it going
-Keep it going
+एकरा चलैत रहै दिअ
 
 
 ;Join Mozilla
-Join Mozilla
+मोजिल्लामे सामिल होउ
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
+एंड्राएड रोबोटकेँ कएल काजसँ तैआर कएल गेल अछि<a href="%s">गूगलसँ साझा कएल</a> आओर <a href="%s">Creative Commons 3.0 Attribution License</a> मे वर्णित शर्तक अनुसार प्रयोग कएल गेल अछि.
 
 
