--- a/hr/mozorg/contribute.lang
+++ b/hr/mozorg/contribute.lang
@@ -7,7 +7,7 @@ Ovaj video zahtijeva preglednik s podrškom za otvoreni video ili <a href="http:
 
 
 ;You don’t have to be a C++ guru (or even know what that means!) to get involved.<br><b>You just have to love the Web.</b>
-Ne trebate biti C++ guru (ili uopće znati što to znači!) da biste se uključili.<br><b>Samo trebate voliti Web.</b>
+Ne trebate biti C++ guru (ili uopće znati što to znači!) da biste se uključili.<br><b>Samo trebate voljeti Web.</b>
 
 
 ;Please enter a valid email address.
@@ -46,7 +46,7 @@ Pošaljite nam poruku i možemo vas odmah uključiti.
 
 
 ;Hi, I’m interested in…
-Bok, zanima me…
+Pozdrav, zanima me…
 
 
 ;I’d like to receive regular contribution news by email
@@ -58,7 +58,7 @@ Hvala što ste nas kontaktirali.
 
 
 ;Someone from Mozilla will get back to you soon with information about how to get involved. While you’re waiting, browse through some of the volunteer opportunities available below.
-Netko iz Mozille će vam se u što kraćem roku javiti s informacijama kako se uključiti. Dok čekate, provjerite neke od niže navedenih volonterskih prilika.
+Netko iz Mozille će vam se ubrzo javiti s informacijama kako se uključiti. Dok čekate na odgovor, provjerite neke od niže navedenih volonterskih prilika.
 
 
 ;Find an opportunity
@@ -82,11 +82,11 @@ Newsletter {ok}
 
 
 ;Helping Users
-Pomaganje korisnicima
+Pomozite korisnicima
 
 
 ;Interested in helping others get the most out of using Firefox and other Mozilla projects? Our support process relies on enthusiastic contributors like you.
-Zanima vas pomaganje ostalima da izvuku najviše iz Firefoxa i ostalih Mozillinih projekata? Naš proces podrške se oslanja na entuzijastične doprinositelje poput vas.
+Zanima vas pomoći ostalima da izvuku najviše iz Firefoxa i ostalih Mozillinih projekata? Naš proces podrške se oslanja na entuzijastične doprinositelje poput vas.
 
 
 ;Find out more about <a href="https://support.mozilla.com/kb/superheroes-wanted">supporting Firefox</a>, <a href="http://support.mozillamessaging.com/en-US/kb/superheroes-wanted">Thunderbird</a> and <a href="http://www.mozilla.org/support/">other Mozilla projects</a>.
@@ -94,7 +94,7 @@ Saznajte više o <a href="https://support.mozilla.com/kb/superheroes-wanted">pod
 
 
 ;You can also join our <a href="https://support.mozilla.com/army-of-awesome">Army of Awesome</a> by helping users on Twitter.
-Možete se pridružiti i našoj <a href="https://support.mozilla.com/army-of-awesome">vojsci Fenomenalnih</a> pomaganjem korisnicima putem Twittera.
+Možete se pridružiti i našoj <a href="https://support.mozilla.com/army-of-awesome">vojsci Fenomenalnih</a> tako da pomognete korisnicima putem Twittera.
 
 
 ;Quality Assurance
@@ -106,7 +106,7 @@ Testovi osiguranja kvalitete su jedan od najlakših načina za uključivanje u M
 
 
 ;Help us <a href="http://quality.mozilla.org/teams/desktop-firefox/">hunt down bugs</a> in Firefox, <a href="http://quality.mozilla.org/teams/web-qa/">test Mozilla web sites</a> or learn more about <a href="http://quality.mozilla.org/">other testing opportunities</a>.
-Pomognite nam <a href="http://quality.mozilla.org/teams/desktop-firefox/">uhvatiti greške</a> u Firefoxu, <a href="http://quality.mozilla.org/teams/web-qa/">testirati Mozilline web stranice</a> ili naučiti više o <a href="http://quality.mozilla.org/">ostalim prilikama za testiranje</a>.
+Pomozite nam <a href="http://quality.mozilla.org/teams/desktop-firefox/">pronaći greške</a> u Firefoxu, <a href="http://quality.mozilla.org/teams/web-qa/">testirati Mozilla web stranice</a> ili naučiti više o <a href="http://quality.mozilla.org/">ostalim prilikama za testiranje</a>.
 
 
 ;Coding
@@ -122,11 +122,11 @@ Mnoge programere možete pronaći na <a href="http://irc.mozilla.org">IRC-u</a>,
 
 
 ;Spread the Word
-Proširite riječ
+Proširite glas
 
 
 ;Help us spread the word about how Firefox and other Mozilla projects are building a better Internet. Share Firefox with the world by <a href="https://affiliates.mozilla.org">becoming an Affiliate</a> and then check out our <a href="https://wiki.mozilla.org/MarketingGuide">Marketing Guide</a> for more ways to get involved.
-Pomognite nam proširiti riječ kako Firefox i Thunderbird grade bolji Internet. Podijelite Firefox sa svijetom tako da <a href="https://affiliates.mozilla.org">postanete Affiliate član</a> i potom provjerite naše <a href="https://wiki.mozilla.org/MarketingGuide">marketinške smjernice</a> za više načina kako se uključiti.
+Pomozite nam proširiti glas kako Firefox i Thunderbird grade bolji Internet. Podijelite Firefox sa svijetom tako da <a href="https://affiliates.mozilla.org">postanete Affiliate član</a> i potom provjerite naše <a href="https://wiki.mozilla.org/MarketingGuide">marketinške smjernice</a> za više načina kako se uključiti.
 
 
 ;Find out about <a href="/contribute/areas.html">more areas of interest…</a>
@@ -172,7 +172,7 @@ Hvala vam!
 
 
 ;You can also join our <a href="https://support.mozilla.org/army-of-awesome">Army of Awesome</a> by helping users on Twitter.
-Možete se pridružiti i našoj <a href="https://support.mozilla.org/army-of-awesome">vojsci Fenomenalnih</a> pomaganjem korisnicima na Twitteru.
+Možete se pridružiti i našoj <a href="https://support.mozilla.org/army-of-awesome">vojsci Fenomenalnih</a> tako da pomognete korisnicima putem Twittera.
 
 
 ;Find out more about <a href="https://support.mozilla.org/kb/superheroes-wanted">supporting Firefox</a> and <a href="http://support.mozillamessaging.com/en-US/kb/superheroes-wanted">Thunderbird</a> users.
