--- a/hr/mozorg/contribute-form.lang
+++ b/hr/mozorg/contribute-form.lang
@@ -13,11 +13,11 @@ Odaberite područje interesa.
 
 
 ;Someone from Mozilla will get back to you soon with information about how to get involved. While you’re waiting, browse through some of the volunteer opportunities available below.
-Netko iz Mozille će vam se u što kraćem roku javiti s informacijama kako se uključiti. Dok čekate, provjerite neke od niže navedenih volonterskih prilika.
+Netko iz Mozille će vam se uskoro javiti s informacijama kako se uključiti. Dok čekate, provjerite neke od niže navedenih volonterskih prilika.
 
 
 ;Hi, I’m interested in…
-Bok, zanima me…
+Pozdrav, zanima me…
 
 
 ;I’d like to receive regular contribution news by email
