--- a/ast/newsletter.lang
+++ b/ast/newsletter.lang
@@ -178,18 +178,18 @@ Gracies por danos les tos razones.
 
 
 ;Mozilla Newsletters
-Mozilla Newsletters
+Boletín de Mozilla 
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
-Thanks! Please check your inbox to confirm your subscription.
+Gracies! Mira na to bandexa d'entrada pa confirmar la to soscripción.
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
+Vas recibir un mensaxe de corréu de mozilla@e.mozilla.org pa confirmar la to soscripción. Si nun lu ves, mira nel filtru de spam. Tienes que confirmar la soscripción pa recibir el nuesu boletín.
+
 
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-
+Asegúrate d'amestar la nuesa direición de corréu mozilla@e.mozilla.org a la to llibreta de direiciones p'asegurate que llegamos a la to bandexa d'entrada.
 
