--- a/ast/snippets.lang
+++ b/ast/snippets.lang
@@ -126,6 +126,6 @@ Rápido, rápido, rápido. <a %s>Firefox p'Android acaba d'anovase</a>. Ayúdano
 
 
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
-Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+¡Firefox tien funcionalidaes nueves pa que faigas les tos xeres más rápido que nunca! <a href="%">Mira'l videu pa deprender más.</a>
 
 
