--- a/ast/whatsnew.lang
+++ b/ast/whatsnew.lang
@@ -26,7 +26,7 @@ Accede a la to siguiente xera<br/>más rápido que nunca
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-Mira cómo t'ayuden les nueves carauterístiques de Firefox a navegar d'una mou más rápidu y eficiente.
+Descubre cómo t'ayuden les nueves carauterístiques de Firefox a navegar d'un mou más rápidu y eficiente.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
@@ -34,7 +34,7 @@ Descubre más sobre <a href="{url}">la función Llingüeta nueva »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Descubre más sobre la <a href="{url}">nueva página de inicio »</a>
+Descubre más sobre la <a href="{url}">nueva páxina d'aniciu »</a>
 
 
 ;Keep in touch
@@ -46,7 +46,7 @@ Sigui en movimientu
 
 
 ;Get Firefox » <b>for Android</b>
-Obtener Firefox » <b>p'Android</b>
+Descargar Firefox » <b>p'Android</b>
 
 
 ;Keep it going
