fr, added non-breakable spaces, while testing LDAP account
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106569 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/fr/main.lang
+++ b/fr/main.lang
@@ -382,15 +382,15 @@ Les toutes dernières technologies
 
 
 ;You're using an old version of Firefox. Get your update to stay safe! <br/> <a href="%s">Download the free upgrade</a> in less than a minute for the latest features, speed and security fixes.
-Vous utilisez une ancienne version de Firefox. Installez la mise à jour pour rester en sécurité ! <br/> <a href="%s">Téléchargez gratuitement la dernière version</a> en moins d'une minute pour bénéficier des dernières fonctionnalités, d'une rapidité accrue et des correctifs de sécurité.
+Vous utilisez une ancienne version de Firefox. Installez la mise à jour pour rester en sécurité&nbsp;! <br/> <a href="%s">Téléchargez gratuitement la dernière version</a> en moins d'une minute pour bénéficier des dernières fonctionnalités, d'une rapidité accrue et des correctifs de sécurité.
 
 
 ;You need an upgrade! Stay safe in less than a minute. <br/> Start using your new Firefox for the best in browsing and customization on the Web. <br/>   It’s fast and free!
-Vous avez besoin d'une mise à niveau ! Restez en sécurité en moins d'une minute. <br/> Commencez à utiliser votre nouveau Firefox pour le meilleur de la navigation et de la personnalisation sur le Web. <br/> C'est rapide et gratuit !
+Vous avez besoin d'une mise à niveau&nbsp;! Restez en sécurité en moins d'une minute. <br/> Commencez à utiliser votre nouveau Firefox pour le meilleur de la navigation et de la personnalisation sur le Web. <br/> C'est rapide et gratuit&nbsp;!
 
 
 ;You're using an older version of Firefox. Get <a href="%s">your update</a> to stay safe! <br/> Experience the latest features, security fixes and the fastest Firefox yet. Download the free upgrade in less than a minute.
-Vous utilisez une ancienne version de Firefox. Installez <a href="%s">la mise à jour</a> pour rester en sécurité ! <br/> Profitez des dernières fonctionnalités, des correctifs de sécurité et du plus rapides des Firefox. Téléchargez gratuitement la mise à niveau en moins d'une minute.
+Vous utilisez une ancienne version de Firefox. Installez <a href="%s">la mise à jour</a> pour rester en sécurité&nbsp;! <br/> Profitez des dernières fonctionnalités, des correctifs de sécurité et du plus rapides des Firefox. Téléchargez gratuitement la mise à niveau en moins d'une minute.
 
 
 ;Upgrade now
