--- a/wo/main.lang
+++ b/wo/main.lang
@@ -1,5 +1,5 @@
 ;Navigation
-Navigation
+Njoow mi
 
 
 ;Press area
@@ -7,67 +7,67 @@ Press Area
 
 
 ;About
-About
+Ci mbiru
 
 
 ;Store
-Store
+Denc
 
 
 ;Donate
-Donate
+Joxe
 
 
 ;Support
-Support
+Dimbali
 
 
 ;Products
-Products
+Meññeef yi
 
 
 ;Add-ons
-Add-ons
+Modil yi
 
 
 ;About Us
-About Us
+Li jëm ci ñun
 
 
 ;Developers
-Developers
+Defarkat yi
 
 
 ;Labs
-Labs
+Labs {ok}
 
 
 ;skip to Navigation
-skip to Navigation
+jàll ci njoow mi
 
 
 ;switch language
-switch language
+soppi lammiñ
 
 
 ;Back to home page
-Back to home page
+Dellu ci xëtu dalal jamm bi
 
 
 ;About Mozilla
-About Mozilla
+Ci wallu Mozilla
 
 
 ;Get Involved
-Get Involved
+Bokk
 
 
 ;Licensing
-Licensing
+Yaatal yi
 
 
 ;Careers
-Careers
+Yoonu dund
 
 
 ;Press Center
@@ -75,330 +75,328 @@ Press Centre
 
 
 ;Contact Us
-Contact Us
+Jokkoo ak ñun
 
 
 ;Site contact
-Site contact
+Jokkoo ak dal bi
 
 
 ;Other languages:
-Other languages:
+Yeneen lammiñ
 
 
 ;%Y-%m-%d
-%Y-%m-%d
+%Y-%m-%d {ok}
 
 
 ;All rights reserved.
-All rights reserved.
+Teg loxo sañ sañ yepp
 
 
 ;Legal Notices
-Legal Notices
+Birale yi aw yoon
 
 
 ;Privacy Policy
-Privacy Policy
+Politigu biir
 
 
 ;Visit Mozilla.com
-Visit Mozilla.com
+Gane Mozilla.com
 
 
 ;Visit Mozilla.com (in English)
-Visit Mozilla.com (US site)
+Gane Mozilla.com (dalu angale)
 
 
 ;Download Firefox - Free
-Download Firefox - Free
+Yeb Firefox - ci dara
 
 
 ;Release Notes
-Release Notes
+Karmati yeene
 
 
 ;Other Systems and Languages
-Other Systems and Languages
+Yeneen sitem ak lamiñ
 
 
 ;Get Firefox
-Get Firefox
+Jot Firefox
 
 
 ;Free Download
-Free Download
+Yeb bu ubbeeku ci ñepp
 
 
 ;Help us make Firefox even better!
-Help us make Firefox even better!
+Dimalileen ñu gëna baaxal Firefox!
 
 
 ;Take a few moments to take a quick survey and share your thoughts with us.
-Take a few moments to take a quick survey and share your thoughts with us.
+Jëlal tuuti simili bokk ci gëstu bu gaaw te nga wax ñu sa xalaat.
 
 
 ;Close
-Close
+Tëj
 
 
 ;(in English)
-(in English)
+(ci angale)
 
 
 ;Download Now - Free
-Download Now - Free
+Yeb leegi - Laajul dara
 
 
 ;Return to top
-Return to top
+Dellu ci kaw
 
 
 ;You should <a href="http://get.adobe.com/flashplayer/">update Adobe Flash Player</a> right now.
-You should <a href="http://get.adobe.com/flashplayer/">update Adobe Flash Player</a> right now.
+Da nga wara <a href="http://get.adobe.com/flashplayer/">yeesal Adobe Flash Player</a> leegi.
 
 
 ;Firefox is up to date, but your current version of Flash Player can cause security and stability issues.  Please <a href="http://get.adobe.com/flashplayer/">install the free update</a> as soon as possible.
-Firefox is up to date, but your current version of Flash Player can cause security and stability issues.  Please <a href="http://get.adobe.com/flashplayer/">install the free update</a> as soon as possible.
+Firefox yees na, wante sa sumbu bii Flash Player mën na indi ay jafe jafe ci wallu kaarange ak dëgaraay. Digal nañu la <a href="http://get.adobe.com/flashplayer/">nga samp yeesal yi </a> ci lumu ëna gaawe.
 
 
 ;Features
-Features
+Mandarga
 
 
 ;Customize
-Customize
+Solal
 
 
 ;Synchronize
-Synchronize
+Jokkoo ci saa si
 
 
 ;Develop for Mobile
-Develop for Mobile
+Defar ngir mobil
 
 
 ;Other Supported Platforms
-Other Supported Platforms
+yeneen porogaraam yu mëna dem
 
 
 ;Other Platforms &amp; Languages
-Other Platforms &amp; Languages
+Yeneen porogaraam ak lammiñ
 
 
 ;Choose your location
-Choose your location
+Tànnal sa berab
 
 
 ;Download Firefox directly from your phone
-Download Firefox directly from your phone
+Yebal firefox ci sa telefon
 
 
 ;Download
-Download
+Yeb
 
 
 ;Next
-Next
+Li topp
 
 
 ;MB
-MB
+MB {ok}
 
 
 ;MegaBytes
-MegaBytes
+MegaBytes {ok}
 
 
 ;FAQ
-FAQ
+FAQ {ok}
 
 
 ;Videos
-Videos
+Wideyoo
 
 
 ;Except where otherwise <a href="%s">noted</a>, content on this site is licensed under the <br /><a href="%s">Creative Commons Attribution Share-Alike License v3.0</a> or any later version.
-Except where otherwise <a href="%s">noted</a>, content on this site is licensed under the <br /><a href="%s">Creative Commons Attribution Share-Alike License v3.0</a> or any later version.
+Ginnaaw <a href="%s">ñu bind ko</a>, këmbu dal bi dafa and ak lisãns <br /><a href="%s">Creative Commons Attribution Share-Alike License v3.0</a>walla beneen sumb.
 
 
 ;Report Trademark Abuse
-Report Trademark Abuse
+Jëriñoo marku jambur
 
 
 ;Free Upgrade
-Free Upgrade
+Yeesal bu andul ak jaay
 
 
 ;Follow us on:
-Follow us on:
+Topp leen ñu ci:
 
 
 ;Customize with Add-ons
-Customize with Add-ons
+Solal ko ak modil yi
 
 
 ;Sync Your Desktop & Mobile
-Sync Your Desktop & Mobile
+jokkanlanteel sa ordintëëru biro ak sa telefon
 
 
 ;Learn More
-Learn More
+Gënal jàng
 
 
 ;Watch the video
-Watch the video
+Xolal wideyoo bi
 
 
 ;WebM format
-WebM format
+Daytal WebM
 
 
 ;Ogg Theora format
-Ogg Theora format
+Daytal Ogg Theora
 
 
 ;MPEG-4 format
-MPEG-4 format
+Daytal MPEG-4
 
 
 ;Whoops! Be sure to enter a valid email address.
-Whoops! Be sure to enter a valid email address.
+Whoops! Na la wóor dugal nga makkaan email bu baax.
 
 
 ;Please read the Mozilla Privacy Policy and agree by checking the box.
-Please read the Mozilla Privacy Policy and agree by checking the box.
+Digal nañu la jàng politigu biir bu Mozilla te nga xosi wërngal bi.
 
 
 ;Please enter your email address and review the Mozilla Privacy Policy.
-Please enter your email address and review the Mozilla Privacy Policy.
+Dugalal sa makkaan email te nga xoolaat politigu biir bu Mozilla.
 
 
 ;Mobile
-Mobile
+Telefon
 
 
 ;Firefox Updated
-Firefox Updated
+Yeesal Firefox
 
 
 ;Take a Look at Tomorrow's Web
-Take a Look at Tomorrow's Web
+Seetal Web bi suba
 
 
 ;Journey to the Future with Firefox
-Journey to the Future with Firefox
+Tukki ci ëlëg ak Firefox
 
 
 ;Join the Beta Program
-Join the Beta Programme
+Fekkisileen porogaraam Beta
 
 
 ;Experience Firefox
-Experience Firefox
+Jëfgisu Firefox
 
 
 ;The future of the Web is waiting for you!
-The future of the Web is waiting for you!
+Ëlëgu Web baa ngi lay nég!
 
 
 ;The future of the Web starts now.
-The future of the Web starts now.
+Ëlëgu Web bi tambali na leegi.
 
 
 ;Try Firefox with a fresh look and feel.
-Try Firefox with a fresh look and feel.
+Jéemleen Firefox ak gis gis bu sedd.
 
 
 ;Experience tomorrow's Web today.
-Experience tomorrow's Web today.
+Suba jëfgisu Web bu tay
 
 
 ;Check out the new look and feel of Firefox.
-Check out the new look and feel of Firefox.
+Seetleen melokaan bu bees ak yëgyëg bu Firefox.
 
 
 ;Browse the future of the Web.
-Browse the future of the Web.
+Joowkat bbu ëlëgu Web bi.
 
 
 ;See Firefox with a new look and feel.
-See Firefox with a new look and feel.
+Xoolal Firefox ak melokaanam bu bees ag yëgyëg.
 
 
 ;Download Beta Now.
-Download Beta Now.
+Yebal Beta leegi.
 
 
 ;All Systems & Languages
-All Systems & Languages
+Sistem ak Lammiñ yépp
 
 
 ;View Full Site
-View Full Site
+Gis dal bi mu mët sëkk
 
 
 ;Get Firefox for Android
-Get Firefox for Android
+Am Firefox ngir Android
 
 
 ;Download for <span>Android</span>
-Download for <span>Android</span>
+Yeb ngir <span>Android</span>
 
 
 ;Free from the Android Market
-Free from the Android Market
+Féex na dale ko ci Android Market
 
 
 ;Desktop
-Desktop
+Ordinatëëru biro
 
 
 ;Firefox Beta for mobile
-Firefox Beta for mobile
+Firefox Beta bu telefon
 
 
 ;Firefox for mobile
-Firefox for mobile
+Firefox bu telefon
 
 
 ;Email
-Email
+Email {ok}
 
 
 ;Mozilla Firefox. Bringing the modern Web to XP.
-Mozilla Firefox. Bringing the modern Web to XP.
+Mozilla Firefox. Indi Web bu bees ngir XP.
 
 
 ;Super speed
-Super speed
+Gaawaay bu mag
 
 
 ;Stunning graphics
-Stunning graphics
+Nataal yu doy waar
 
 
 ;The latest technologies
-The latest technologies
+Teknolosi yi mujj
 
 
 ;You're using an old version of Firefox. Get your update to stay safe! <br/> <a href="%s">Download the free upgrade</a> in less than a minute for the latest features, speed and security fixes.
-You're using an old version of Firefox. Get your update to stay safe! <br/> <a href="%s">Download the free upgrade</a> in less than a minute for the latest features, speed and security fixes.
+Yaa ngiy jëfandikoo ak sumbu  Firefox bu yagg.  Jëlal sa yeesal ngir am kaarange! <br/> <a href="%s">Yebal yeesal bi nga dul fay</a> ci simili yu ndaw ngir am mbir yu bees yi, gaawaay ak kaarange.
 
 
 ;You need an upgrade! Stay safe in less than a minute. <br/> Start using your new Firefox for the best in browsing and customization on the Web. <br/>   It’s fast and free!
-You need an upgrade! Stay safe in less than a minute. <br/> Start using your new Firefox for the best in browsing and customization on the Web. <br/>   It’s fast and free!
+Soxla nga yeesal! Nga am kaarange ci simili. <br/> Tambalil jëriñoo sa Firefox bu bees ngir joow mu gëna baax ci. <br/>  Gaaw na te amul pay!
 
 
 ;You're using an older version of Firefox. Get <a href="%s">your update</a> to stay safe! <br/> Experience the latest features, security fixes and the fastest Firefox yet. Download the free upgrade in less than a minute.
-You're using an older version of Firefox. Get <a href="%s">your update</a> to stay safe! <br/> Experience the latest features, security fixes and the fastest Firefox yet. Download the free upgrade in less than a minute.
+Yaa ngiy jëfandikoo ak sumbu Firefox bu yagg.. Jëlal <a href="%s">sa yeesal</a>ngir am kaarange! <br/> Seetal bees bees yi , kaarange ak firefox bi gëna gaaw. Yebal yeesal yi kenn jaayul ci lu mëtul simili.
 
 
 ;Upgrade now
-Upgrade now
+Yeesal leegi
 
 
 ;Update now
-Update now
-
-
+Yeesal leegi
